# serializer version: 1
# name: test_remove_dagster_framework_lines_from_local_dev_stack_trace
  SerializableErrorInfo(
    cause=None,
    cls_name='Exception',
    context=SerializableErrorInfo(
      cause=None,
      cls_name='Exception',
      context=None,
      message='''
        Exception: INNER EXCEPTION
  
      ''',
      stack=list([
        '''
            File "hi.py", line 21, in my_asset
              raise Exception("INNER EXCEPTION")
  
        ''',
      ]),
    ),
    message='''
      Exception: OUTER EXCEPTION
  
    ''',
    stack=list([
      '''
          File "/Users/dgibson/dagster/python_modules/dagster/dagster/_core/execution/plan/utils.py", line 54, in op_execution_error_boundary
            yield
  
      ''',
      '''
          File "/Users/dgibson/dagster/python_modules/dagster/dagster/_utils/__init__.py", line 490, in iterate_with_context
            next_output = next(iterator)
  
      ''',
      '''
          File "/Users/dgibson/dagster/python_modules/dagster/dagster/_core/execution/plan/compute_generator.py", line 140, in _coerce_op_compute_fn_to_iterator
            result = invoke_compute_fn(
  
      ''',
      '''
          File "/Users/dgibson/dagster/python_modules/dagster/dagster/_core/execution/plan/compute_generator.py", line 128, in invoke_compute_fn
            return fn(context, **args_to_pass) if context_arg_provided else fn(**args_to_pass)
  
      ''',
      '''
          File "hi.py", line 23, in my_asset
            raise Exception("OUTER EXCEPTION")
  
      ''',
    ]),
  )
# ---
# name: test_remove_dagster_framework_lines_from_local_dev_stack_trace.1
  SerializableErrorInfo(
    cause=None,
    cls_name='Exception',
    context=SerializableErrorInfo(
      cause=None,
      cls_name='Exception',
      context=None,
      message='''
        Exception: INNER EXCEPTION
  
      ''',
      stack=list([
        '''
            File "hi.py", line 21, in my_asset
              raise Exception("INNER EXCEPTION")
  
        ''',
      ]),
    ),
    message='''
      Exception: OUTER EXCEPTION
  
    ''',
    stack=list([
      '''
          File "hi.py", line 23, in my_asset
            raise Exception("OUTER EXCEPTION")
  
      ''',
    ]),
  )
# ---
# name: test_remove_dagster_framework_lines_from_prod_stack_trace
  SerializableErrorInfo(
    cause=None,
    cls_name='Exception',
    context=SerializableErrorInfo(
      cause=None,
      cls_name='Exception',
      context=None,
      message='''
        Exception: Sling command failed:
        []
  
      ''',
      stack=list([
        '''
            File "/usr/local/lib/python3.11/site-packages/sling/__init__.py", line 452, in _run
              for line in _exec_cmd(cmd, env=env, stdin=stdin):
  
        ''',
        '''
            File "/usr/local/lib/python3.11/site-packages/sling/__init__.py", line 520, in _exec_cmd
              raise Exception(f'Sling command failed:\n{lines}')
  
        ''',
      ]),
    ),
    message='''
      Exception: 
      [90m7:40PM[0m [32mINF[0m Sling Replication [1 streams] | CLOUD_PRODUCTION_MAIN -> SLING_DB_MAIN
      [90m7:40PM[0m [32mINF[0m [1 / 1] running stream public.event_logs_view
      [90m7:40PM[0m [32mINF[0m connecting to source database (postgres)
      [90m7:40PM[0m [32mINF[0m [31mexecution failed[0m
      
      [31mfatal:
      ~ failure running replication (see docs @ https://docs.slingdata.io/sling-cli)
      --------------------------- public.event_logs_view ---------------------------
      ~ could not connect to database
      pq: canceling statement due to conflict with recovery[0m
      [90m7:40PM[0m [32mINF[0m [31m~ could not connect to database
      pq: canceling statement due to conflict with recovery[0m
      
      [35mPerhaps adjusting the `max_standby_archive_delay` and `max_standby_streaming_delay` settings in the source PG Database could help. See https://stackoverflow.com/questions/14592436/postgresql-error-canceling-statement-due-to-conflict-with-recovery[0m
      
      [90m7:40PM[0m [32mINF[0m Sling Replication Completed in 0s | CLOUD_PRODUCTION_MAIN -> SLING_DB_MAIN | [32m0 Successes[0m | [31m1 Failures[0m
      
      Sling command failed:
      []
  
    ''',
    stack=list([
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster/_core/execution/plan/utils.py", line 54, in op_execution_error_boundary
            yield
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster/_utils/__init__.py", line 482, in iterate_with_context
            next_output = next(iterator)
                          ^^^^^^^^^^^^^^
  
      ''',
      '''
          File "/opt/python_modules/dagster-open-platform/dagster_open_platform/sling/assets.py", line 69, in cloud_product_main_event_log
            yield from embedded_elt.replicate(context=context).fetch_column_metadata().fetch_row_count()
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 189, in __next__
            return next(self._inner_iterator)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 229, in _fetch_row_count
            for event in self:
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 189, in __next__
            return next(self._inner_iterator)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 206, in _fetch_column_metadata
            for event in self:
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 189, in __next__
            return next(self._inner_iterator)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/resources.py", line 388, in _replicate
            results = sling._run(  # noqa
                      ^^^^^^^^^^^^^^^^^^^
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/sling/__init__.py", line 465, in _run
            raise Exception('\n'.join(lines))
  
      ''',
    ]),
  )
# ---
# name: test_remove_dagster_framework_lines_from_prod_stack_trace.1
  SerializableErrorInfo(
    cause=None,
    cls_name='Exception',
    context=SerializableErrorInfo(
      cause=None,
      cls_name='Exception',
      context=None,
      message='''
        Exception: Sling command failed:
        []
  
      ''',
      stack=list([
        '''
            File "/usr/local/lib/python3.11/site-packages/sling/__init__.py", line 452, in _run
              for line in _exec_cmd(cmd, env=env, stdin=stdin):
  
        ''',
        '''
            File "/usr/local/lib/python3.11/site-packages/sling/__init__.py", line 520, in _exec_cmd
              raise Exception(f'Sling command failed:\n{lines}')
  
        ''',
      ]),
    ),
    message='''
      Exception: 
      [90m7:40PM[0m [32mINF[0m Sling Replication [1 streams] | CLOUD_PRODUCTION_MAIN -> SLING_DB_MAIN
      [90m7:40PM[0m [32mINF[0m [1 / 1] running stream public.event_logs_view
      [90m7:40PM[0m [32mINF[0m connecting to source database (postgres)
      [90m7:40PM[0m [32mINF[0m [31mexecution failed[0m
      
      [31mfatal:
      ~ failure running replication (see docs @ https://docs.slingdata.io/sling-cli)
      --------------------------- public.event_logs_view ---------------------------
      ~ could not connect to database
      pq: canceling statement due to conflict with recovery[0m
      [90m7:40PM[0m [32mINF[0m [31m~ could not connect to database
      pq: canceling statement due to conflict with recovery[0m
      
      [35mPerhaps adjusting the `max_standby_archive_delay` and `max_standby_streaming_delay` settings in the source PG Database could help. See https://stackoverflow.com/questions/14592436/postgresql-error-canceling-statement-due-to-conflict-with-recovery[0m
      
      [90m7:40PM[0m [32mINF[0m Sling Replication Completed in 0s | CLOUD_PRODUCTION_MAIN -> SLING_DB_MAIN | [32m0 Successes[0m | [31m1 Failures[0m
      
      Sling command failed:
      []
  
    ''',
    stack=list([
      '''
          File "/opt/python_modules/dagster-open-platform/dagster_open_platform/sling/assets.py", line 69, in cloud_product_main_event_log
            yield from embedded_elt.replicate(context=context).fetch_column_metadata().fetch_row_count()
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 189, in __next__
            return next(self._inner_iterator)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 229, in _fetch_row_count
            for event in self:
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 189, in __next__
            return next(self._inner_iterator)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 206, in _fetch_column_metadata
            for event in self:
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/sling_event_iterator.py", line 189, in __next__
            return next(self._inner_iterator)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/dagster_sling/resources.py", line 388, in _replicate
            results = sling._run(  # noqa
                      ^^^^^^^^^^^^^^^^^^^
  
      ''',
      '''
          File "/usr/local/lib/python3.11/site-packages/sling/__init__.py", line 465, in _run
            raise Exception('\n'.join(lines))
  
      ''',
    ]),
  )
# ---
